testdata/cli/chart_fail.txtar
# fail function should convert to CUE error().
# https://github.com/cue-exp/helm2cue/issues/45
#
# Helm aborts when fail is reached:
! exec helm template test ./chartdir
cmp stderr stderr.helm.golden

# helm2cue converts fail to CUE error():
exec helm2cue chart chartdir outdir
stderr 'converted 2/2 templates'
cmp outdir/test.cue expected/test.cue

# cue export also fails when the guard condition is met:
cd outdir
! exec cue export --out yaml -t release_name=test .
cmp stderr ../stderr.cue.golden

-- chartdir/Chart.yaml --
apiVersion: v2
name: test-app
version: 0.1.0
-- chartdir/values.yaml --
required: ""
name: test
-- chartdir/templates/test.yaml --
{{- if not .Values.required }}
{{- fail "required must be set" }}
{{- end }}
apiVersion: v1
kind: ConfigMap
metadata:
  name: test
data:
  key: {{ .Values.name }}
-- chartdir/templates/good.yaml --
apiVersion: v1
kind: ConfigMap
metadata:
  name: good
data:
  key: value
-- stderr.helm.golden --
Error: execution error at (test-app/templates/test.yaml:2:4): required must be set

Use --debug flag to render out invalid YAML
-- stderr.cue.golden --
results: error in call to list.FlattenN: required must be set:
    ./results.cue:7:10
    ./test.cue:7:3
test.0: required must be set:
    ./test.cue:7:3
-- expected/test.cue --
// Code generated by helm2cue; DO NOT EDIT.

package test_app

test: [{
	if !(_nonzero & {#arg: #values.required, _}) {
		error("required must be set")
	}
	apiVersion: "v1"
	kind:       "ConfigMap"
	metadata: {
		name: "test"
	}
	data: {
		key: #values.name
	}
}]
